@@ -1,18 +1,18 @@
 <?xml version="1.0" ?>
 <settings version="1">
   <section id="pvr.plutotv">
-    <category id="playback" label="30001" help="">
+    <category id="playback" label="30001" help="30100">
       <group id="1" label="">
-        <setting id="workaround_broken_streams" type="boolean" label="30009" help="-1">
+        <setting id="workaround_broken_streams" type="boolean" label="30009" help="30101">
           <level>2</level>
           <default>true</default>
           <control type="toggle"/>
         </setting>
       </group>
     </category>
-    <category id="channels" label="30002" help="">
+    <category id="channels" label="30002" help="30200">
       <group id="1" label="">
-        <setting id="start_channelnum" type="integer" label="30008" help="-1">
+        <setting id="start_channelnum" type="integer" label="30008" help="30201">
           <level>0</level>
           <default>1</default>
           <constraints>
@@ -20,14 +20,14 @@
           </constraints>
           <control type="edit" format="integer" />
         </setting>
-        <setting id="colored_channel_logos" type="boolean" label="30010" help="-1">
+        <setting id="colored_channel_logos" type="boolean" label="30010" help="30202">
           <level>0</level>
           <default>true</default>
           <control type="toggle"/>
         </setting>
       </group>
     </category>
-    <category id="debug" label="30040" help="">
+    <category id="debug" label="30040" help="30300">
       <group id="1" label="">
         <setting id="internal_sid" type="string" label="30041" help="-1">
           <level>3</level>
